--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,7 @@
 services:
   discordspotifystatus:
+    container_name: discordspotifystatus
+    restart: unless_stopped
     build:
       context: .
     environment:
