--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
 	"name": "discord-spotify-status",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Change your discord name on servers based on the music you listen to.",
 	"main": "src/app.js",
 	"type": "module",
 	"scripts": {
 		"start": "node .",
+		"dev": "node --watch .",
 		"knip": "knip",
 		"format": "prettier --write src/**/*.js"
 	},
-	"keywords": [],
 	"author": "Ghosty",
 	"license": "GPL-3.0-only",
-	"packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
+	"packageManager": "pnpm@10.30.1+sha512.3590e550d5384caa39bd5c7c739f72270234b2f6059e13018f975c313b1eb9fefcc09714048765d4d9efe961382c312e624572c0420762bdc5d5940cdf9be73a",
 	"dependencies": {
 		"chalk": "^5.6.2",
-		"debug": "^4.4.3",
 		"discord.js-selfbot-v13": "^3.7.1",
 		"fast-deep-equal": "^3.1.3",
-		"figlet": "^1.9.4",
+		"figlet": "^1.10.0",
 		"readline": "^1.3.0"
 	},
 	"devDependencies": {
-		"@types/node": "^24.10.1",
-		"knip": "^5.69.1",
-		"prettier": "^3.6.2",
+		"@types/node": "^24.10.13",
+		"knip": "^5.85.0",
+		"prettier": "^3.8.1",
 		"typescript": "^5.9.3"
 	}
 }
