--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"packageManager": "pnpm@10.30.1+sha512.3590e550d5384caa39bd5c7c739f72270234b2f6059e13018f975c313b1eb9fefcc09714048765d4d9efe961382c312e624572c0420762bdc5d5940cdf9be73a",
 	"dependencies": {
 		"chalk": "^5.6.2",
+		"debug": "^4.4.3",
 		"discord.js-selfbot-v13": "^3.7.1",
 		"fast-deep-equal": "^3.1.3",
 		"figlet": "^1.10.0",
